# app/serializers/v1/workout_serializer.rb
@@ -3,6 +3,6 @@ module V1
 	  include FastJsonapi::ObjectSerializer
 
 	  attributes :title, :description, :duration_mins
-	  belongs_to :influencer
+	  belongs_to :influencer, record_type: :trainer
 	end
 end
